Content and UI review

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
       %nav{id: 'proposition-menu'}
         %ul{id: "proposition-links"}
           %li= link_to 'Using Registers', 'https://registers.cloudapps.digital/using-registers'
-          %li= link_to 'View registers', registers_path
+          %li= link_to 'Register’s collection', registers_path
           %li= link_to 'Support', 'https://registers.cloudapps.digital/support'
           %li= link_to 'Documentation', 'https://registers-docs.cloudapps.digital/'
 
