Update search input label on the entries page

--- a/app/views/registers/entries.html.haml
+++ b/app/views/registers/entries.html.haml
@@ -21,7 +21,7 @@
         %form.js-filter-form
           %fieldset
             .form-group
-              %label{class: "form-label", for: "search"} Search for a #{params[:register]}
+              %label{class: "form-label", for: "search"} Search for a record
               %input{name: "search", id: "search", class: "form-control"}
 
   .grid-row
