Update Technical documentation link to API documentation

--- a/app/views/registers/show.html.haml
+++ b/app/views/registers/show.html.haml
@@ -68,7 +68,7 @@
           %li
             = link_to "Register updates", "#{params[:register]}/entries"
           %li
-            = link_to "Technical documentation", "https://registers-docs.cloudapps.digital", target: :blank
+            = link_to "API documentation", "https://registers-docs.cloudapps.digital", target: :blank
           %li
             = link_to "Create a register", "https://www.gov.uk/guidance/creating-a-register", target: :blank
           %li
