Typo in Register’s collection

--- a/app/views/registers/entries.html.haml
+++ b/app/views/registers/entries.html.haml
@@ -7,7 +7,7 @@
     %li
       = link_to "GOV.UK Registers", root_path
     %li
-      = link_to "Register’s collection", root_path
+      = link_to "Registers collection", root_path
     %li
       = link_to "#{prepare_register_name(params[:register])} register", "/#{params[:register]}?phase=#{@register_meta_data['register-record']['phase']}"
     %li.active
