--- a/app/views/registers/show.html.haml
+++ b/app/views/registers/show.html.haml
@@ -7,7 +7,7 @@
     %li
       = link_to "GOV.UK Registers", root_path
     %li
-      = link_to "Register’s collection", registers_path
+      = link_to "Registers collection", registers_path
     %li.active
       #{prepare_register_name(params[:register])} register
 
