--- a/app/views/registers/index.html.haml
+++ b/app/views/registers/index.html.haml
@@ -12,7 +12,7 @@
       %li.active
         = params[:phase]
     - else
-      %li.active Register’s collection
+      %li.active Registers collection
 
 %main#content{role:'main'}
   .grid-row
@@ -35,7 +35,7 @@
             #details-content-0.panel.panel-border-narrow{"aria-hidden" => "true"}
               %p Registers in progress are not yet ready for use as the structure of the datasets might still change. Those that are nearly ready are open for feedback. The ones up next are in the backlog.
       - else
-        %h1.heading-large Register’s collection
+        %h1.heading-large Registers collection
         .grid-row
           .column-one-third
             .data
