--- a/app/views/registers/entries.html.haml
+++ b/app/views/registers/entries.html.haml
@@ -11,7 +11,7 @@
     %li
       = link_to "#{prepare_register_name(params[:register])} register", "/#{params[:register]}?phase=#{@register_meta_data['register-record']['phase']}"
     %li.active
-      Entries
+      Register updates
 
 %main#content{role:'main'}
   .grid-row
@@ -28,13 +28,13 @@
     .column-full
       %ul.entries.js-filter-block
         %li.entries__item.js-filter-item{"data-filter-terms" => "The Gambia"}
-          %p.entries__date 15 May 2017
+          %p.entries__date Last updated: 15 May 2017
           %h3.heading-medium The Gambia
           %table
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -50,7 +50,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -66,7 +66,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -82,7 +82,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -98,7 +98,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -120,7 +120,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -136,7 +136,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -176,7 +176,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -210,7 +210,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -250,7 +250,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
@@ -284,7 +284,7 @@
             %thead
               %tr
                 %th Field
-                %th Old Value
+                %th Previous Value
                 %th New Value
             %tbody
               %tr
