Populate data using client library
This commit uses the new client library functionality to get data for the /records and /entries pages, in addition to metadata for both of these pages. For the /entries page, we also compute the differences between different versions of records for a given primary key so that these changes can be displayed to the user.

--- a/app/views/registers/entries.html.haml
+++ b/app/views/registers/entries.html.haml
@@ -9,7 +9,7 @@
     %li
       = link_to "Registers collection", root_path
     %li
-      = link_to "#{prepare_register_name(params[:register])} register", "/#{params[:register]}?phase=#{@register_meta_data['register-record']['phase']}"
+      = link_to "#{prepare_register_name(params[:register])} register", "/#{params[:register]}?phase=#{@register_metadata[:phase]}"
     %li.active
       Register updates
 
@@ -27,290 +27,8 @@
   .grid-row
     .column-full
       %ul.entries.js-filter-block
-        %li.entries__item.js-filter-item{"data-filter-terms" => "The Gambia"}
-          %p.entries__date Last updated: 30 May 2017
-          %h3.heading-medium The Gambia
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td name
-                %td
-                  Gambia,The
-                %td
-                  The Gambia
-        %li.entries__item.js-filter-item{"data-filter-terms" => "Czechia"}
-          %p.entries__date 20 May 2017
-          %h3.heading-medium Czechia
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td name
-                %td
-                  Czech Republic
-                %td
-                  Czechia
-        %li.entries__item.js-filter-item{"data-filter-terms" => "Vatican City"}
-          %p.entries__date 20 May 2017
-          %h3.heading-medium Vatican City
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td official-name
-                %td
-                  The Vatican City
-                %td
-                  Vatican City State
-        %li.entries__item.js-filter-item{"data-filter-terms" => "The Bahamas"}
-          %p.entries__date 20 May 2017
-          %h3.heading-medium The Bahamas
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td name
-                %td
-                  Bahamas,The
-                %td
-                  The Bahamas
-        %li.entries__item.js-filter-item{"data-filter-terms" => "The Gambia"}
-          %p.entries__date 20 May 2017
-          %h3.heading-medium GM
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td name
-                %td
-                  Gambia,The
-                %td
-                  The Gambia
-              %tr
-                %td official-name
-                %td
-                  The Republic of the Gambia
-                %td
-                  The Islamic Republic of The Gambia
-        %li.entries__item.js-filter-item{"data-filter-terms" => "GM"}
-          %p.entries__date 10 May 2017
-          %h3.heading-medium GM
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td official-name
-                %td
-                  The Republic of the Gambia
-                %td
-                  The Islamic Republic of The Gambia
-        %li.entries__item.js-filter-item{"data-filter-terms" => "Zimbabwe"}
-          %p.entries__date 10 May 2017
-          %h3.heading-medium Zimbabwe
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td country
-                %td
-                  %span.unknown No original data
-                %td
-                  ZW
-              %tr
-                %td name
-                %td
-                  %span.unknown No original data
-                %td
-                  Zimbabwe
-              %tr
-                %td official-name
-                %td
-                  %span.unknown No original data
-                %td
-                  The Republic of Zimbabwe
-              %tr
-                %td citizen-names
-                %td
-                  %span.unknown No original data
-                %td
-                  Zimbabwean
-              %tr
-                %td start-date
-                %td
-                  %span.unknown No original data
-                %td
-                  1980-04-18
-        %li.entries__item.js-filter-item{"data-filter-terms" => "Zambia"}
-          %p.entries__date 10 May 2017
-          %h3.heading-medium Zambia
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td country
-                %td
-                  %span.unknown No original data
-                %td
-                  ZM
-              %tr
-                %td name
-                %td
-                  %span.unknown No original data
-                %td
-                  Zambia
-              %tr
-                %td official-name
-                %td
-                  %span.unknown No original data
-                %td
-                  The Republic of Zambia
-              %tr
-                %td citizen-names
-                %td
-                  %span.unknown No original data
-                %td
-                  Zambian
-        %li.entries__item.js-filter-item{"data-filter-terms" => "Yemen"}
-          %p.entries__date 10 May 2017
-          %h3.heading-medium Yemen
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td country
-                %td
-                  %span.unknown No original data
-                %td
-                  YE
-              %tr
-                %td name
-                %td
-                  %span.unknown No original data
-                %td
-                  Yemen
-              %tr
-                %td official-name
-                %td
-                  %span.unknown No original data
-                %td
-                  The Republic of Yemen
-              %tr
-                %td citizen-names
-                %td
-                  %span.unknown No original data
-                %td
-                  Yemeni
-              %tr
-                %td start-date
-                %td
-                  %span.unknown No original data
-                %td
-                  1990-05-22
-        %li.entries__item.js-filter-item{"data-filter-terms" => "Vietnam"}
-          %p.entries__date 10 May 2017
-          %h3.heading-medium Vietnam
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td country
-                %td
-                  %span.unknown No original data
-                %td
-                  VN
-              %tr
-                %td name
-                %td
-                  %span.unknown No original data
-                %td
-                  Vietnam
-              %tr
-                %td official-name
-                %td
-                  %span.unknown No original data
-                %td
-                  The Socialist Republic of Vietnam
-              %tr
-                %td citizen-names
-                %td
-                  %span.unknown No original data
-                %td
-                  Vietnamese
-        %li.entries__item.js-filter-item{"data-filter-terms" => "Venezuela"}
-          %p.entries__date 10 May 2017
-          %h3.heading-medium Venezuela
-          %table
-            %thead
-              %tr
-                %th Field
-                %th Previous Value
-                %th New Value
-            %tbody
-              %tr
-                %td country
-                %td
-                  %span.unknown No original data
-                %td
-                  VE
-              %tr
-                %td name
-                %td
-                  %span.unknown No original data
-                %td
-                  Venezuela
-              %tr
-                %td official-name
-                %td
-                  %span.unknown No original data
-                %td
-                  The Bolivarian Republic of Venezuela
-              %tr
-                %td citizen-names
-                %td
-                  %span.unknown No original data
-                %td
-                  Venezuelan
+        = render partial: 'timeline_record', collection: @entries_with_items
+
 
 = content_for :head do
   %script{src: "//code.jquery.com/jquery-3.2.1.min.js"}
