--- a/app/views/registers/_record.html.haml
+++ b/app/views/registers/_record.html.haml
@@ -1,4 +1,4 @@
-%tr{class: "js-filter-item", "data-filter-terms" => record.instance_values.map { |key, value| value }.uniq }
-  - @register_meta_data['register-record']['fields'].each do |field|
-    %td{class: field}
-      = record.instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
+%tr{class: "js-filter-item", "data-filter-terms" => record[:item].map { |key, value| value }.uniq }
+  - @register_metadata[:field_definitions].each do |field|
+    %td{class: field[:item]['field']}
+      = record[:item][field[:item]['field']] || "<span class='unknown'>No data found</span>".html_safe
