--- a/app/views/registers/show.html.haml
+++ b/app/views/registers/show.html.haml
@@ -93,7 +93,7 @@
         %span.summary Get a copy this data
       #details-content-0.panel.panel-border-narrow{"aria-hidden" => "true"}
         %p Download this data as: #{link_to 'TSV', '#'}, #{link_to 'CSV', '#'} or as a #{link_to 'Spreadsheet', '#'}.
-        %p Preview a sample as #{link_to 'JSON', 'https://prison-estate.register.gov.uk/preview-records/json'}, #{link_to 'YAML', '#'} or #{link_to 'TTL', '#'}.
+        %p Preview a sample as #{link_to 'JSON', "https://#{params[:register]}.register.gov.uk/preview-records/json", target: :blank}, #{link_to 'YAML', "https://#{params[:register]}.register.gov.uk/preview-records/yaml", target: :blank} or #{link_to 'TTL', "https://#{params[:register]}.register.gov.uk/preview-records/turtle", target: :blank}.
 
     %details{:role => "group"}
       %summary{"aria-controls" => "details-content-0", "aria-expanded" => "false", :role => "button"}
